test/should-fail/badexponent1.f3
/**
 * Ensure that malformed exponents are caught by the compiler
 * @test/compile-error
 */
var v = 34e;

